[gd_scene load_steps=4 format=3 uid="uid://wnf1nmurgr6m"]

[ext_resource type="Script" uid="uid://dnchj5p5oh5xt" path="res://Scripts/Needs/Needs.gd" id="1_ssouu"]
[ext_resource type="Texture2D" uid="uid://bvrihtf4ra4x6" path="res://Assets/Panels/NeedsPanel.png" id="3_ssouu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tdikv"]
texture = ExtResource("3_ssouu")
expand_margin_left = 15.0
expand_margin_top = 35.0
expand_margin_right = 15.0
expand_margin_bottom = 35.0

[node name="Needs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 7.0
offset_right = 2.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssouu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = -3.0
offset_top = 660.0
offset_right = 357.0
offset_bottom = 750.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tdikv")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 77.0

[node name="Hunger" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2

[node name="HungerBar" type="TextureProgressBar" parent="CanvasLayer/Panel/VBoxContainer/Hunger"]
custom_minimum_size = Vector2(220, 18)
layout_mode = 2
value = 100.0

[node name="Thirst" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ThirstBar" type="TextureProgressBar" parent="CanvasLayer/Panel/VBoxContainer/Thirst"]
custom_minimum_size = Vector2(220, 18)
layout_mode = 2
value = 100.0

[node name="Love" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2

[node name="LoveBar" type="TextureProgressBar" parent="CanvasLayer/Panel/VBoxContainer/Love"]
custom_minimum_size = Vector2(220, 18)
layout_mode = 2
value = 100.0
